[package]
name = "parser"
version = "0.1.0"
authors = ["Tawana Musewe <tawana@aeonis.co.za>"]
edition = "2018"

[dependencies]
log = "0.4.11"
nom = "5.1"

[dev-dependencies]
bencher = "*"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1

[[bench]]
harness = false
name = "parser"
